{
  "version": 4,
  "terraform_version": "0.12.12",
  "serial": 21,
  "lineage": "9c53526f-4b94-f1bc-14f6-2fc983aaafdf",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:868781784008:subnet/subnet-003b8741f575842ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.80.0/20",
            "default_for_az": true,
            "id": "subnet-003b8741f575842ef",
            "map_public_ip_on_launch": true,
            "owner_id": "868781784008",
            "state": "available",
            "vpc_id": "vpc-037898d8ddef423ba"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:868781784008:subnet/subnet-0c1cb5cc41a1cae09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "id": "subnet-0c1cb5cc41a1cae09",
            "map_public_ip_on_launch": true,
            "owner_id": "868781784008",
            "state": "available",
            "vpc_id": "vpc-037898d8ddef423ba"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:868781784008:subnet/subnet-0d886fc7ce8f15b3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "id": "subnet-0d886fc7ce8f15b3c",
            "map_public_ip_on_launch": true,
            "owner_id": "868781784008",
            "state": "available",
            "vpc_id": "vpc-037898d8ddef423ba"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:868781784008:vpc/vpc-037898d8ddef423ba",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-018c08994a67f588f",
            "default_route_table_id": "rtb-0e75a0d065153db35",
            "default_security_group_id": "sg-062437014752660fd",
            "dhcp_options_id": "dopt-69b65313",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-037898d8ddef423ba",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e75a0d065153db35",
            "owner_id": "868781784008",
            "tags": {
              "Name": "defaultVPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5ae5525eb033d0a",
            "arn": "arn:aws:ec2:us-east-1:868781784008:instance/i-09c921d0d781f0f5a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "udacitykubeone-host",
            "id": "i-09c921d0d781f0f5a",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "udacitykubeone-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0bf0c7fc7d610deec",
            "private_dns": "ip-172-31-80-210.ec2.internal",
            "private_ip": "172.31.80.210",
            "public_dns": "ec2-54-167-111-27.compute-1.amazonaws.com",
            "public_ip": "54.167.111.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0ad2654fb7259d252",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udacitykubeone-common",
              "udacitykubeone-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003b8741f575842ef",
            "tags": {
              "Name": "udacitykubeone-control_plane-1",
              "kubernetes.io/cluster/udacitykubeone": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0293128b5ef7f5df7",
              "sg-0dc426f54c48e19bd"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5ae5525eb033d0a",
            "arn": "arn:aws:ec2:us-east-1:868781784008:instance/i-0762f67796d6b3f3f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "udacitykubeone-host",
            "id": "i-0762f67796d6b3f3f",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "udacitykubeone-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0aa20d976f67e3126",
            "private_dns": "ip-172-31-24-165.ec2.internal",
            "private_ip": "172.31.24.165",
            "public_dns": "ec2-54-226-54-14.compute-1.amazonaws.com",
            "public_ip": "54.226.54.14",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-073bb83ab9840ad26",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udacitykubeone-common",
              "udacitykubeone-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c1cb5cc41a1cae09",
            "tags": {
              "Name": "udacitykubeone-control_plane-2",
              "kubernetes.io/cluster/udacitykubeone": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0293128b5ef7f5df7",
              "sg-0dc426f54c48e19bd"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5ae5525eb033d0a",
            "arn": "arn:aws:ec2:us-east-1:868781784008:instance/i-09c753bca40f7c7da",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "udacitykubeone-host",
            "id": "i-09c753bca40f7c7da",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "udacitykubeone-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0ba7575a05c9987d9",
            "private_dns": "ip-172-31-38-156.ec2.internal",
            "private_ip": "172.31.38.156",
            "public_dns": "ec2-54-210-151-100.compute-1.amazonaws.com",
            "public_ip": "54.210.151.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-070af0fafb1c241a5",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udacitykubeone-common",
              "udacitykubeone-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d886fc7ce8f15b3c",
            "tags": {
              "Name": "udacitykubeone-control_plane-3",
              "kubernetes.io/cluster/udacitykubeone": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0293128b5ef7f5df7",
              "sg-0dc426f54c48e19bd"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:868781784008:loadbalancer/net/udacitykubeone-api-lb/9183daa26e2afdfc",
            "arn_suffix": "net/udacitykubeone-api-lb/9183daa26e2afdfc",
            "dns_name": "udacitykubeone-api-lb-9183daa26e2afdfc.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:868781784008:loadbalancer/net/udacitykubeone-api-lb/9183daa26e2afdfc",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "udacitykubeone-api-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-003b8741f575842ef"
              },
              {
                "subnet_id": "subnet-0c1cb5cc41a1cae09"
              },
              {
                "subnet_id": "subnet-0d886fc7ce8f15b3c"
              }
            ],
            "subnets": [
              "subnet-003b8741f575842ef",
              "subnet-0c1cb5cc41a1cae09",
              "subnet-0d886fc7ce8f15b3c"
            ],
            "tags": {
              "Cluster": "udacitykubeone",
              "kubernetes.io/cluster/udacitykubeone": "shared"
            },
            "vpc_id": "vpc-037898d8ddef423ba",
            "zone_id": "Z26RNL4JYFTOTI"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:868781784008:listener/net/udacitykubeone-api-lb/9183daa26e2afdfc/3fb884a50855589b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:868781784008:targetgroup/udacitykubeone-api/93e3b2fa2b501378",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:868781784008:listener/net/udacitykubeone-api-lb/9183daa26e2afdfc/3fb884a50855589b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:868781784008:loadbalancer/net/udacitykubeone-api-lb/9183daa26e2afdfc",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:868781784008:targetgroup/udacitykubeone-api/93e3b2fa2b501378",
            "arn_suffix": "targetgroup/udacitykubeone-api/93e3b2fa2b501378",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:868781784008:targetgroup/udacitykubeone-api/93e3b2fa2b501378",
            "lambda_multi_value_headers_enabled": false,
            "name": "udacitykubeone-api",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "target_type": "instance",
            "vpc_id": "vpc-037898d8ddef423ba"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "control_plane_api",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:868781784008:targetgroup/udacitykubeone-api/93e3b2fa2b501378-20191026155041814200000001",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:868781784008:targetgroup/udacitykubeone-api/93e3b2fa2b501378",
            "target_id": "i-09c921d0d781f0f5a"
          },
          "depends_on": [
            "aws_instance.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:868781784008:targetgroup/udacitykubeone-api/93e3b2fa2b501378-20191026155042090800000003",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:868781784008:targetgroup/udacitykubeone-api/93e3b2fa2b501378",
            "target_id": "i-0762f67796d6b3f3f"
          },
          "depends_on": [
            "aws_instance.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:868781784008:targetgroup/udacitykubeone-api/93e3b2fa2b501378-20191026155041856300000002",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:868781784008:targetgroup/udacitykubeone-api/93e3b2fa2b501378",
            "target_id": "i-09c753bca40f7c7da"
          },
          "depends_on": [
            "aws_instance.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:868781784008:security-group/sg-0dc426f54c48e19bd",
            "description": "cluster common rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc426f54c48e19bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "udacitykubeone-common",
            "name_prefix": null,
            "owner_id": "868781784008",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/udacitykubeone": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-037898d8ddef423ba"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:868781784008:security-group/sg-0293128b5ef7f5df7",
            "description": "cluster control_planes",
            "egress": [],
            "id": "sg-0293128b5ef7f5df7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "udacitykubeone-control_planes",
            "name_prefix": null,
            "owner_id": "868781784008",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/udacitykubeone": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-037898d8ddef423ba"
          }
        }
      ]
    }
  ]
}